Bug 75466 - glamor_xv.c: Build failure against old X server due to missing include
Summary: glamor_xv.c: Build failure against old X server due to missing include
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/Acceleration/glamor (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Zhigang Gong
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-24 20:17 UTC by Chí-Thanh Christopher Nguyễn
Modified: 2014-06-26 14:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
0001-glamor_xv-add-missing-include.patch (888 bytes, text/plain)
2014-02-24 20:17 UTC, Chí-Thanh Christopher Nguyễn
no flags Details

Description Chí-Thanh Christopher Nguyễn 2014-02-24 20:17:07 UTC
Created attachment 94681 [details]
0001-glamor_xv-add-missing-include.patch

glamor_xv.c uses DamageDamageRegion but does not include xorg/damage.h. This
causes the build to fail if 9b8217f9ef6279fff6628631d18497bed0343ef9 is not
present in the X server.

This patch was also sent on 2014-02-11 to glamor mailing list, but has not passed moderation.
Comment 1 Michel Dänzer 2014-02-27 07:43:00 UTC
Please submit the patch to the glamor mailing list, with a Signed-off-by: tag and a Bugzilla: tag referencin this report.
Comment 2 Chí-Thanh Christopher Nguyễn 2014-04-01 13:53:49 UTC
Sent again:
http://lists.freedesktop.org/archives/glamor/2014-April/000626.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.