glamor_xv: add missing include

glamor_xv.c uses DamageDamageRegion but does not include xorg/damage.h. This
causes the build to fail if 9b8217f9ef6279fff6628631d18497bed0343ef9 is not
present in the X server.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75466
Bugzilla: https://bugs.gentoo.org/show_bug.cgi?id=499442

Signed-off-by: Chí-Thanh Christopher Nguyễn <chithanh at gentoo.org>
Signed-off-by: Alex Deucher <alexander.deucher@amd.com>